Update package build

--- a/debian/rules
+++ b/debian/rules
@@ -70,9 +70,9 @@ install: build
 	# Add here commands to install the package.
 	dh_install
 	# fixing default not being installed
-	mkdir -p debian/linuxmuster-webui7
-	cp -r lib debian/linuxmuster-webui7
-	rsync -avr --exclude='usr/lib/linuxmuster-webui/plugins/ni_*' --exclude='usr/lib/linuxmuster-webui/etc/.installed' usr debian/linuxmuster-webui7
+	mkdir -p debian/python3-sophosxgs
+
+	rsync -avr usr debian/python3-sophosxgs
 #	cp -r usr debian/linuxmuster-webui7
 
 # Build architecture-independent files here.
